@@ -27,20 +27,20 @@ DECLARE_REGISTRY (bfd);
 /* If supplied a path starting with this sequence, gdb_bfd_open will
    open BFDs using target fileio operations.  */
 
-#define TARGET_SYSROOT_PREFIX "target:"
+#define TARGET_FILENAME_PREFIX "target:"
 
-/* Returns nonzero if NAME starts with TARGET_SYSROOT_PREFIX, zero
+/* Returns nonzero if NAME starts with TARGET_FILENAME_PREFIX, zero
    otherwise.  */
 
 int is_target_filename (const char *name);
 
 /* Returns nonzero if the filename associated with ABFD starts with
-   TARGET_SYSROOT_PREFIX, zero otherwise.  */
+   TARGET_FILENAME_PREFIX, zero otherwise.  */
 
 int gdb_bfd_has_target_filename (struct bfd *abfd);
 
 /* Open a read-only (FOPEN_RB) BFD given arguments like bfd_fopen.
-   If NAME starts with TARGET_SYSROOT_PREFIX then the BFD will be
+   If NAME starts with TARGET_FILENAME_PREFIX then the BFD will be
    opened using target fileio operations if necessary.  Returns NULL
    on error.  On success, returns a new reference to the BFD, which
    must be freed with gdb_bfd_unref.  BFDs returned by this call are
@@ -48,7 +48,7 @@ int gdb_bfd_has_target_filename (struct bfd *abfd);
    then after this call it is owned by BFD.  If the BFD was not
    accessed using target fileio operations then the filename
    associated with the BFD and accessible with bfd_get_filename will
-   not be exactly NAME but rather NAME with TARGET_SYSROOT_PREFIX
+   not be exactly NAME but rather NAME with TARGET_FILENAME_PREFIX
    stripped.  */
 
 struct bfd *gdb_bfd_open (const char *name, const char *target, int fd);
